syntax = "proto3";
option java_multiple_files = true;
package br.com.rformagio.grpc.server.grpcserver;

import "google/api/annotations.proto";

message AddressRequest {
  string cep = 1;
}

message AddressResponse {
  string cep = 1;
  string cidade = 2;
}

service CepService {
  rpc getAddress(AddressRequest) returns (AddressResponse)
  {
  	option (google.api.http) = {
      post: "/getAddr"
    };
  }
}
